# impc-api

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
impc_api/: batch_solr_request.py  solr_request.py
impc_api/utils/: validators.py  warnings.py
tests/: test_batch_solr_request.py  test_helpers.py  test_solr_request.py
