[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[project]
name = "impc_api"
version = "1.0.7"
description = "A package to facilitate making API requests to the IMPC Solr API"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "MPI2" },
    { name = "Marina Kan" },
    { name = "Diego Pava" }
]
dependencies = [
    "ipykernel>=6.29.5",
    "notebook>=7.2.2",
    "pandas>=2.2.0",
    "requests>=2.33.0",
    "tqdm>=4.66.4",
    "pydantic>=2.9"
]

readme = "README.md"
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "pytest>=8.2.2"
]

[tool.uv.build-backend]
module-root = ""

[project.urls]
"Homepage" = "https://github.com/mpi2/impc-api"
